# NotesManager

./: .gitmodules  CMakeLists.txt  NotesManager.cpp  NotesManager.h  NotesManager.qrc  NotesManager.ui  NotesManager_de_DE.ts  TopicWidget.cpp  TopicWidget.h  TopicWidget.ui  main.cpp
